--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,16 +151,56 @@ table {
     box-sizing: border-box;
 }
 
+.col-1 {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    float: left;
+    clear: left;
+    margin-left: 15px; 
+    display: inline-block;
+}
+.col-2 {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    float: left;
+    clear: right;
+    margin-left: 15px; 
+    display: inline-block;
+}
+
 .col-1-3 {
+    position: relative;
     width: 33.33%;
-    background: #eaeaed;
-    height: 600px;
-    padding-top: 38px;
+    background: #4aaaa5;
+    height: 200px;
     /*text-align: center;*/
-    width: 280px;
-    border-radius: 6px;
+    width: 200px;
     margin: 1.5% 1.5% 50px 1.7%;
 }
+
+.text-m{
+    margin-top: 15px;
+}
+
+
+
+.tag {
+    float: left;
+    position: absolute;
+    left: 0px;
+    top: 140px;
+    width: 200px;
+    height: 50px;
+    z-index: 1000;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-weight: bold;
+    text-align: center;
+}
+
+
 
 .col-2-3 {
     width: 66.66%;
@@ -172,12 +212,14 @@ table {
     vertical-align: top;
 }
 
+/*
 .grid,
 .col-1-3,
 .col-2-3 {
     padding-left: 15px;
     padding-right: 15px;
 }
+*/
 
 /*
   ========================================
@@ -227,6 +269,8 @@ table {
     border-bottom: 5px solid #dddddd;
     margin: 0 280px 0 280px;
 }
+
+
 
 .page-section-1-2 {
     height: 20px;
@@ -371,7 +415,7 @@ p {
 .about-me {
     color: #4aaaa5;
     height: 50px;
-    width: 800px;
+    width: 900px;
     /*float: top;*/
     margin-bottom: 50px;
     border-bottom: 5px solid #dddddd;
@@ -379,7 +423,7 @@ p {
 
 .about-borders-and-background {
     background: #ffffff;
-    height: 600px;
+    height: 900px;
     padding-top: 38px;
     /*text-align: center;*/
     width: 960px;
