--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,6 @@
-/*credit for original code
+/*credit for original reset code
  http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
   License: none (public domain)
-
-  with modifications from me Prince0fTime
 */
 
 html,
@@ -158,9 +156,10 @@ table {
     position: relative;
     float: left;
     clear: left;
-    margin-left: 15px; 
+    margin-left: 15px;
     display: inline-block;
 }
+
 .col-2 {
     z-index: 0;
     width: 200px;
@@ -168,25 +167,22 @@ table {
     position: relative;
     float: left;
     clear: right;
-    margin-left: 15px; 
+    margin-left: 15px;
     display: inline-block;
 }
 
 .col-1-3 {
     position: relative;
     width: 33.33%;
-    background: #4aaaa5;
     height: 200px;
     /*text-align: center;*/
     width: 200px;
     margin: 1.5% 1.5% 50px 1.7%;
 }
 
-.text-m{
+.text-m {
     margin-top: 15px;
 }
-
-
 
 .tag {
     z-index: 0;
@@ -202,8 +198,6 @@ table {
     font-weight: bold;
     text-align: center;
 }
-
-
 
 .col-2-3 {
     width: 66.66%;
@@ -273,15 +267,13 @@ table {
     margin: 0 280px 0 280px;
 }
 
-
-
 .page-section-1-2 {
     height: 20px;
     text-align: center;
     width: 100px;
     float: left;
     border-right: 1px solid #dddddd;
-    color: #dddddd;
+    color: #777777;
     margin: 30px 0 20px 0px;
     /*used for debug
         background: #4aaaa5;
@@ -293,7 +285,7 @@ table {
     text-align: center;
     width: 100px;
     float: left;
-    color: #dddddd;
+    color: #777777;
     margin: 30px 0 20px 0px;
     /*used for debug
         background: #4aaaa5;
@@ -324,7 +316,8 @@ h5 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-p {
+p,
+a {
     margin-bottom: 22px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -339,17 +332,13 @@ p {
   ========================================
 */
 
-.btn {
-    border-radius: 5px;
+.button {
+    font-family: 'Georgia', Times, Times New Roman, serif;
     display: inline-block;
-    margin: 50px;
-    color: #000;
-}
-
-.btn-alt {
-    border: 1px solid #505050;
+    color: #ffffff;
+    border: 1px solid #dddddd;
     padding: 10px 30px;
-    background: rgb(255, 255, 255);
+    background: #4aaaa5;
 }
 
 /*
@@ -419,7 +408,6 @@ p {
 .about-me {
     color: #4aaaa5;
     height: 50px;
-    width: 900px;
     /*float: top;*/
     margin-bottom: 50px;
     border-bottom: 5px solid #dddddd;
@@ -442,4 +430,31 @@ p {
 .pics {
     float: left;
     margin: 10px 10px 10px 0px;
+}
+
+/*
+  ========================================
+  Primary input section
+  ========================================
+*/
+
+.input-setup {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.message-form input,
+.message-form textarea {
+    border: 1px solid #dddddd;
+    color: #888;
+    display: block;
+    margin: 10px 0 27px 0;
+    padding: 5px 8px;
+    width: 760px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.message-form textarea {
+    height: 120px;
 }
