text-decoration: none; added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,7 @@ h5 {
 
 p,
 a {
+    text-decoration: none;
     margin-bottom: 22px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
